# discv5-cli

./: .gitignore  Cargo.toml  README.md  bootstrap.json  example.bootstrap.json
.github/workflows/: build.yml
cli/src/: cli.rs
src/: cli.rs  lib.rs  main.rs  query_server.rs
src/cli/: mod.rs
src/packet/: command.rs  mod.rs
src/request_enr/: command.rs  enr_ext.rs  mod.rs
src/server/: bootstrap.rs  command.rs  enr_build.rs  keys.rs  mod.rs  node.rs  query.rs  query_server.rs
src/server/services/: events.rs  mod.rs  query.rs  stats.rs
src/utils/: logging.rs  mod.rs
tests/: bootstrap.rs  packet.rs
