[package]
name = "discv5-cli"
version = "0.2.4"
description = "Simple utility to test discv5"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"
readme = "./README.md"
keywords = ["ethereum", "discv5", "discovery", "p2p" ]
repository = "https://github.com/AgeManning/enr-cli"
categories = ["cryptography::cryptocurrencies"]
license = "MIT"
exclude = [
	".gitignore",
	".github/*"
]

[dependencies]
discv5 = { version = "0.1.0-beta.4", features = ["libp2p"] }
clap = "2.33.3"
futures = "0.3.8"
tokio = { version = "1", features = ["full"] }
libsecp256k1 = "0.3.5"
sha2 = "0.9.2"
hex = "0.4.2"
simple_logger = "1.11.0"
log = "0.4.11"
libp2p-core = "0.25.1"
